[gd_scene load_steps=9 format=3 uid="uid://b123mvlorg2ki"]

[ext_resource type="Script" path="res://v1/Card/CardScene.gd" id="1_fom1s"]
[ext_resource type="Texture2D" uid="uid://vmuxp7fw2cij" path="res://assets/images/cards/art/Blue Plains/Building/Pyramidia.png" id="1_xi7ch"]
[ext_resource type="Resource" uid="uid://c3n6hrla3ipqy" path="res://v1/Card/CardImages1.tres" id="2_5p6c2"]
[ext_resource type="Texture2D" uid="uid://dhuredu1dugo1" path="res://assets/images/frames/Blue Plains_Creature.png" id="2_aw167"]
[ext_resource type="FontFile" uid="uid://ca0g1l1k6v1sf" path="res://assets/fonts/Pendlefont Heavy.TTF" id="3_b3sl5"]
[ext_resource type="Resource" uid="uid://dj3q7llo2u3t1" path="res://v1/Card/CardFrames1.tres" id="3_ndbo1"]
[ext_resource type="FontFile" uid="uid://3fiaey4jsd3x" path="res://assets/fonts/Pendlefont Medium.TTF" id="4_si267"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nt2pl"]
size = Vector2(660, 958)

[node name="CardScene" type="Node2D"]
script = ExtResource("1_fom1s")
Images = ExtResource("2_5p6c2")
Frames = ExtResource("3_ndbo1")

[node name="Bg" type="Polygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(-355, -500, 355, -500, 355, 500, -355, 500)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_nt2pl")

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -490.0
offset_right = 350.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Art" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
position = Vector2(350, 340)
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_xi7ch")

[node name="Frame" type="Sprite2D" parent="Control"]
unique_name_in_owner = true
position = Vector2(350, 490)
texture = ExtResource("2_aw167")

[node name="CostLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.02
anchor_right = 0.236
anchor_bottom = 0.2
offset_left = -0.300003
offset_top = 0.399999
offset_right = -0.19994
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 100
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.268857
anchor_top = 0.0295918
anchor_right = 0.807
anchor_bottom = 0.102
offset_left = -0.200008
offset_right = 0.100074
offset_bottom = 0.0399637
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 40
text = "Card name "
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TypeLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0444286
anchor_top = 0.591796
anchor_right = 0.958429
anchor_bottom = 0.664122
offset_left = -0.1
offset_top = 0.0399387
offset_right = 0.10002
offset_bottom = 0.160454
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 40
text = "Landscape type + Card type"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0687143
anchor_top = 0.670143
anchor_right = 0.931286
anchor_bottom = 0.869939
offset_left = -0.100001
offset_top = 0.259974
offset_right = 0.10006
offset_bottom = 0.459873
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_si267")
theme_override_font_sizes/font_size = 30
text = "FLOOP >>> If you control a Creature in this lane, gain 1 Action. Use it only to play a creature into this Lane."
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="AttackLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.895408
anchor_right = 0.15
anchor_bottom = 0.97398
offset_left = -18.0
offset_top = -42.5
offset_right = 22.0
offset_bottom = 56.5001
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 70
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DamageLabel" type="Label" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0771429
anchor_top = 0.52602
anchor_right = 0.915714
anchor_bottom = 0.604592
offset_left = -18.0
offset_top = -42.5
offset_right = 22.0
offset_bottom = 56.5001
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 70
text = "1"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DefenseLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.847143
anchor_top = 0.894388
anchor_right = 0.947143
anchor_bottom = 0.972959
offset_left = -18.0
offset_top = -42.5
offset_right = 21.9999
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 70
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="IDLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.457143
anchor_top = 0.896429
anchor_right = 0.557143
anchor_bottom = 0.975
offset_left = -18.0
offset_top = -42.5
offset_right = 22.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_b3sl5")
theme_override_font_sizes/font_size = 70
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Node2D" type="Node2D" parent="Control"]

[connection signal="input_event" from="Area2D" to="." method="OnArea2dInputEvent"]
[connection signal="mouse_entered" from="Area2D" to="." method="OnArea2dMouseEntered"]
[connection signal="mouse_exited" from="Area2D" to="." method="OnArea2dMouseExited"]
